STASH changes from master to this just changes in feature/add-authore-info

--- a/src/index.html
+++ b/src/index.html
@@ -8,3 +8,6 @@
 
 </body>
 </html>
+This is STASH changes from master branch. 
+I checkout from master to feature/added-authore-info & made this 2 line changes.
+Come back to master and git stash apply
